# CATS-Chat

./: CMakeLists.txt
src/: connectdialog.cpp  connectdialog.h  connectdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagedialog.cpp  messagedialog.h  messagedialog.ui  radiodialog.cpp  radiodialog.h  radiodialog.ui  stationdialog.cpp  stationdialog.h  stationdialog.ui
